// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<h1
  class="yozora-heading yozora-heading--toc custom-class"
  id="heading-1"
  style="color:orange;font-size:16px"
>
  <p
    class="yozora-heading__content"
  >
    Waw -- 1, 中文标题“这”
  </p>
  <a
    class="yozora-heading__anchor"
    href="#heading-1"
  >
    ¶
  </a>
</h1>
`;

exports[`snapshot default: level 2 1`] = `
<h2
  class="yozora-heading yozora-heading--toc"
  id="heading-2"
  style="color:orange;font-size:16px"
>
  <p
    class="yozora-heading__content"
  >
    Waw -- 2, 中文标题“这”
  </p>
  <a
    class="yozora-heading__anchor"
    href="#heading-2"
  >
    ¶
  </a>
</h2>
`;
